@@ -7,3 +7,7 @@ members = [
 	"example-build",
 	"example-macro",
 ]
+
+#[patch.crates-io]
+#serde_tokenstream = { path = "../serde_tokenstream" }
+
