@@ -4,7 +4,7 @@ use typify::import_types;
 
 use serde::{Deserialize, Serialize};
 
-import_types!("../example.json");
+import_types!(schema = "../example.json");
 
 #[test]
 fn test_main() {
